tools/tests/ui/fail/l1098.cnf
// Test file for error code: L1098
// Expected error: Underflow FINANCIAL-DECIMAL character in variable declaration -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-underflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
